--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,10 @@
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "scripts": {
+    "prod": "bun run ./src/Entrypoint.ts",
+    "dev": "bun run --hot ./src/Entrypoint.ts"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   },
