--- a/server/package.json
+++ b/server/package.json
@@ -8,9 +8,13 @@
     "dev": "bun run --hot ./src/Entrypoint.ts"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/express": "^5.0.6"
   },
   "peerDependencies": {
     "typescript": "^5"
+  },
+  "dependencies": {
+    "express": "^5.2.1"
   }
 }
