feat: add prod script in package

--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "name": "server",
   "version": "1.0.50",
   "scripts": {
+    "prod": "bun run src/Entrypoint.ts",
     "dev": "bun run --watch src/Entrypoint.ts"
   },
   "dependencies": {
