--- a/server/compose.yml
+++ b/server/compose.yml
@@ -3,6 +3,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    container_name: ocean-server
     restart: unless-stopped
     ports:
       - "3000:3000"
