feat: add healthy condition to server over postgres

--- a/server/compose.yml
+++ b/server/compose.yml
@@ -9,3 +9,6 @@ services:
       - "3000:3000"
     networks:
       - ocean-network
+    depends_on:
+      postgres:
+        condition: service_healthy
