--- a/docker/postgres/compose.yml
+++ b/docker/postgres/compose.yml
@@ -11,3 +11,9 @@ services:
       - ocean-network
     volumes:
       - ocean-data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U oceanuser -d oceandb"]
+      start_period: 15s
+      interval: 10s
+      timeout: 5s
+      retries: 5
