--- a/docker/postgres/compose.yml
+++ b/docker/postgres/compose.yml
@@ -3,19 +3,14 @@ services:
     image: postgres:15-alpine
     container_name: postgres
     restart: unless-stopped
-    secrets:
-      - pg_username
-      - pg_password
-    environment:
-      - POSTGRES_DB=oceandb
-      - POSTGRES_USER_FILE=/run/secrets/pg_username
-      - POSTGRES_PASSWORD_FILE=/run/secrets/pg_password
+    env_file:
+      - ./secrets/.env
     networks:
       - ocean-network
     volumes:
       - ocean-data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $(cat /run/secrets/pg_username) -d oceandb"]
+      test: ["CMD-SHELL", "pg_isready -U oceanuser -d oceandb"]
       start_period: 15s
       interval: 10s
       timeout: 5s
