feat: add env file to server compose

--- a/server/compose.yml
+++ b/server/compose.yml
@@ -5,6 +5,8 @@ services:
       dockerfile: Dockerfile
     container_name: ocean-server
     restart: unless-stopped
+    env_file:
+      - ./.env
     ports:
       - "3000:3000"
     networks:
