--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,15 +2,16 @@ FROM oven/bun:1.3.5-alpine AS build
 WORKDIR /usr/src/app
 
 FROM build AS install
-RUN mkdir -p /temp/prod
+RUN mkdir -p /temp
 
-COPY package.json bun.lock /temp/prod/
-RUN cd /temp/prod && bun install --frozen-lockfile --production
+COPY package.json bun.lock /temp/
+RUN cd /temp && bun install --frozen-lockfile --production
 
 FROM build AS release
-COPY --from=install /temp/prod/node_modules ./node_modules
+COPY --from=install /temp/node_modules ./node_modules
 
-COPY . .
+COPY --chown=bun:bun . .
+
 USER bun
 EXPOSE 3000
 ENTRYPOINT [ "bun", "run", "prod" ]
