--- a/server/compose.yml
+++ b/server/compose.yml
@@ -11,6 +11,12 @@ services:
       - "3000:3000"
     networks:
       - ocean-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
     depends_on:
       postgres:
         condition: service_healthy
