--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -26,7 +26,8 @@
 
     // Paths - Base URL and path mappings
     "paths": {
-      "@Controllers/*": ["./src/Presentation/Controllers/*"],
+      "@Plugins/*": ["./src/Presentation/Plugins/*"],
+      "@Routers/*": ["./src/Presentation/Routers/*"],
     }
   }
 }
