feat: rename dockerfile for server

--- a/server/compose.yml
+++ b/server/compose.yml
@@ -2,7 +2,7 @@ services:
   server:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: dockerfile
     container_name: ocean-server
     restart: unless-stopped
     ports:
