--- a/server/dockerfile
+++ b/server/dockerfile
@@ -1,14 +1,14 @@
 FROM oven/bun:1.3.5-alpine AS build
 WORKDIR /usr/src/app
 
-FROM build AS install
+FROM build AS dependencies
 RUN mkdir -p /temp
 
 COPY package.json bun.lock /temp/
 RUN cd /temp && bun install --frozen-lockfile --production
 
 FROM build AS release
-COPY --from=install /temp/node_modules ./node_modules
+COPY --from=dependencies /temp/node_modules ./node_modules
 
 RUN apk add --no-cache curl
 COPY --chown=bun:bun . .
