--- a/server/compose.prod.yml
+++ b/server/compose.prod.yml
@@ -2,8 +2,9 @@ services:
   server:
     build:
       context: .
+      target: prod
       dockerfile: dockerfile
-    container_name: ocean-server
+    container_name: ocean-prod
     restart: unless-stopped
     ports:
       - "3000:3000"
@@ -15,6 +16,3 @@ services:
       timeout: 10s
       retries: 3
       start_period: 10s
-    depends_on:
-      postgres:
-        condition: service_healthy
