--- a/compose.yml
+++ b/compose.yml
@@ -1,25 +1,7 @@
 name: ocean
 
 include:
-  - server/compose.yml
-
-services:
-  postgres:
-    image: postgres:15-alpine
-    container_name: postgres
-    restart: unless-stopped
-    env_file:
-      - ./server/.env
-    networks:
-      - ocean-network
-    volumes:
-      - ocean-data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U oceanuser -d oceandb"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 15s
+  - server/compose.prod.yml
 
 volumes:
   ocean-data:
@@ -29,4 +11,4 @@ volumes:
 networks:
   ocean-network:
     driver: bridge
-    name: ocean-net
+    name: ocean-network
