--- a/server/compose.yml
+++ b/server/compose.yml
@@ -2,9 +2,8 @@ services:
   server:
     build:
       context: .
-      target: dev
       dockerfile: dockerfile
-    container_name: ocean-dev
+    container_name: ocean-server
     restart: unless-stopped
     ports:
       - "3000:3000"
