chore: rename elysia service

--- a/server/compose.yml
+++ b/server/compose.yml
@@ -1,9 +1,8 @@
 services:
-  server:
+  elysia:
     build:
       context: .
       dockerfile: dockerfile
-    container_name: ocean-server
     restart: unless-stopped
     ports:
       - "3000:3000"
