chore: adjust and rename env composes

--- a/docker/compose.dev.yml
+++ b/docker/compose.dev.yml
@@ -1,5 +1,5 @@
 services:
-  server:
+  elysia:
     build:
-      target: dev
-    container_name: ocean-server-dev
+      target: development
+    container_name: elysia-dev
