feat: add build cmds to makefile

--- a/compose.yml
+++ b/compose.yml
@@ -1,7 +1,8 @@
 name: ocean
 
 include:
-  - server/compose.yml
+  - path: ./server/compose.yml
+  - path: ./docker/database/compose.yml
 
 volumes:
   ocean-data:
